--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "axios-curlirize": "^2.0.0",
     "desm": "^1.3.1",
+    "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
     "fastify-plugin": "^5.0.1",
     "nanoid": "^5.1.5",
@@ -19,6 +20,7 @@
     "node-html-parser": "^7.0.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "qs": "^6.14.0",
     "sharp": "^0.34.1",
     "tesseract.js": "^6.0.1"
   },
